--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">キャンプ場開発のため、税金を払い続けている山の土地を募集しています。</p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">土地をお持ちの方はこちら</a>
+                        <p class="text-white-75 font-weight-light mb-5">キャンプ場開発のため、東海地方（愛知・岐阜・三重）で山の土地を募集しています。</p>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://forms.gle/oFDibFBiSZCzmUtEA">土地をお持ちの方はこちら</a>
                     </div>
                 </div>
             </div>
@@ -57,7 +57,7 @@
                         <h2 class="text-white mt-0">一緒にキャンプ場を開発・運営しませんか？</h2>
                         <hr class="divider light my-4" />
                         <p class="text-white-50 mb-4">釣り・自然・キャンプなどアウトドアが好きな方大歓迎！私たちと一緒にキャンプ場を開発しませんか？キャンプ場の運営スタッフも募集しています。</p>
-                        <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">興味ある方はこちら</a>
+                        <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Coming Soon...</a>
                     </div>
                 </div>
             </div>
@@ -180,12 +180,12 @@
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                         <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>080-9999-9999</div>
+                        <div>070-8327-9014</div>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
                         <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                        <a class="d-block" href="mailto:contact@yourwebsite.com">mailaddress@mail.com</a>
+                        <a class="d-block" href="mailto:contact@yourwebsite.com">buildingcampsite@gmail.com</a>
                     </div>
                 </div>
             </div>
